clusters/kshah-image-test/dogs-cats/dogs-cats/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogs-cats
  namespace: dogs-cats
spec:
  selector:
    app: dogs-cats
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
