clusters/kshah-image-test/dogs-cats/dogs-cats/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dogs-cats-vs
  namespace: dogs-cats
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: dogs-cats
            port:
              number: 8080
